Fix horizontal scrolling

--- a/blocks/cover/__link/cover__link.css
+++ b/blocks/cover/__link/cover__link.css
@@ -4,13 +4,10 @@
   text-decoration: none;
   min-height: 740px;
   min-width: 1184px;
-  max-width: 1184px;
-  width: 100%;
   background-image: url(../../../images/cover-trains.jpg);
   display: inline-block;
   background-size: cover;
   background-position: center;
-  /* background-repeat: no-repeat; */
   z-index: 0;
   margin: 0 48px 92px 48px;
 }
